fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/3-kubernetes-ingress-controller/hands-on-03-parte2-ingress-routing/app-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api-deployment
  labels:
    app: app-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api
  template:
    metadata:
      labels:
        app: app-api
    spec:
      containers:
      - name: api-container
        image: nginx:alpine  # Usaremos Nginx com conteúdo customizado para simular API
        ports:
        - containerPort: 80
        volumeMounts:
        - name: api-html
          mountPath: /configmap-html                # CM (read-only)
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf # conf custom com try_files
          subPath: default.conf
        command: ["/bin/sh","-c"]
        args:
          - |
            set -e
            apk add --no-cache gettext >/dev/null 2>&1
            mkdir -p /usr/share/nginx/html
            # Copia TODOS os .html do ConfigMap e aplica envsubst
            for f in /configmap-html/*.html; do
              fn="$(basename "$f")"
              envsubst < "$f" > "/usr/share/nginx/html/$fn"
            done
            exec nginx -g 'daemon off;'
      volumes:
      - name: api-html
        configMap:
          name: api-html-config
      - name: nginx-conf
        configMap:
          name: nginx-default-conf
