fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/3-kubernetes-ingress-controller/hands-on-03-parte2-ingress-routing/app-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend-deployment
  labels:
    app: app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-frontend
  template:
    metadata:
      labels:
        app: app-frontend
    spec:
      containers:
      - name: frontend-container
        image: nginx:alpine # Usaremos Nginx com conteúdo customizado
        ports:
        - containerPort: 80
        volumeMounts:
        - name: frontend-html
          mountPath: /configmap-html
        command: ["/bin/sh","-c"]
        args:
          - |
            apk add --no-cache gettext >/dev/null 2>&1
            cp /configmap-html/index.html /usr/share/nginx/html/index.html
            envsubst < /usr/share/nginx/html/index.html > /usr/share/nginx/html/index.html.tmp
            mv /usr/share/nginx/html/index.html.tmp /usr/share/nginx/html/index.html
            exec nginx -g 'daemon off;'
      volumes:
      - name: frontend-html
        configMap:
          name: frontend-html-config
