fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/3-kubernetes-ingress-controller/hands-on-03-parte2-ingress-routing/app-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-api-service
spec:
  selector:
    app: app-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
